tests/ui/feature-gates/feature-gate-doc_masked.stderr
error[E0658]: `#[doc(masked)]` is experimental
  --> $DIR/feature-gate-doc_masked.rs:1:1
   |
LL | #[doc(masked)]
   | ^^^^^^^^^^^^^^
   |
   = note: see issue #44027 <https://github.com/rust-lang/rust/issues/44027> for more information
   = help: add `#![feature(doc_masked)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
